spacing fixes

--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -1,9 +1,3 @@
-body {
-  @include media-breakpoint-down(md) {
-    padding-top: 100vh;
-  }
-
-}
 .section {
   position: relative;
   &__bounce {
@@ -16,7 +10,7 @@ body {
     margin: 0 auto;
   }
   &--map {
-    height: 22rem;
+    height: 24rem;
   }
   &--header {
     display: flex;
@@ -28,11 +22,8 @@ body {
     background-size: cover;
 
     @include media-breakpoint-down(md) {
-      position: fixed;
-      width: 100%;
-      top: 0;
       background: image_url("background-mobile.jpg");
-      height: 100vh;
+      height: 90vh;
       background-position: center;
       background-size: cover;
     }
